--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -1,8 +1,10 @@
-pandas
-requests
-seaborn
-matplotlib
-gitpython
+GitPython==3.1.40
+GitPython==3.1.40
+matplotlib==3.8.0
+pandas==2.1.4
+Requests==2.31.0
+seaborn==0.13.1
+
 
 
 
